--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
-    "prepare": "lefthook install"
+    "prepare": "lefthook install",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@antv/infographic": "^0.2.1",
+    "@neondatabase/serverless": "^1.0.2",
+    "@openrouter/ai-sdk-provider": "^1.5.4",
+    "ai": "^6.0.3",
+    "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
     "fumadocs-core": "^16.4.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
@@ -28,8 +38,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "drizzle-kit": "^0.31.8",
     "lefthook": "^2.0.13",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "ultracite": "6.5.0",
