feat: landing page

--- a/biome.json
+++ b/biome.json
@@ -48,7 +48,8 @@
       },
       "performance": {
         "noNamespaceImport": "off",
-        "noBarrelFile": "off"
+        "noBarrelFile": "off",
+        "noImgElement": "off"
       }
     }
   }
