--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@antv/infographic": "^0.2.1",
+    "@base-ui/react": "^1.0.0",
     "@neondatabase/serverless": "^1.0.2",
     "@openrouter/ai-sdk-provider": "^1.5.4",
     "ai": "^6.0.3",
@@ -25,10 +26,12 @@
     "drizzle-orm": "^0.45.1",
     "fumadocs-core": "^16.4.0",
     "lucide-react": "^0.562.0",
+    "motion": "^12.23.26",
     "next": "16.1.1",
     "next-intl": "^4.6.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "shadcn": "^3.6.2",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
