--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@ai-sdk/react": "^3.0.3",
     "@antv/infographic": "^0.2.1",
     "@base-ui/react": "^1.0.0",
     "@neondatabase/serverless": "^1.0.2",
@@ -25,6 +26,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "eventemitter3": "^5.0.1",
+    "fast-json-patch": "^3.1.1",
     "fumadocs-core": "^16.4.0",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
@@ -34,7 +36,8 @@
     "react-dom": "19.2.3",
     "react-resizable-panels": "^4.0.15",
     "shadcn": "^3.6.2",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
