--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,8 @@
       "!.next",
       "!dist",
       "!build",
-      "!src/components/ui"
+      "!src/components/ui",
+      "!src/components/ai-elements"
     ]
   },
   "javascript": {
