--- a/package.json
+++ b/package.json
@@ -20,25 +20,34 @@
     "@base-ui/react": "^1.0.0",
     "@neondatabase/serverless": "^1.0.2",
     "@openrouter/ai-sdk-provider": "^1.5.4",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@xyflow/react": "^12.10.0",
     "ai": "^6.0.5",
     "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "embla-carousel-react": "^8.6.0",
     "eventemitter3": "^5.0.1",
     "fast-json-patch": "^3.1.1",
     "fumadocs-core": "^16.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
+    "nanoid": "^5.1.6",
     "next": "16.1.1",
     "next-intl": "^4.7.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-resizable-panels": "^4.2.0",
     "shadcn": "^3.6.2",
+    "shiki": "^3.20.0",
+    "streamdown": "^1.6.10",
     "tailwind-merge": "^3.4.0",
+    "tokenlens": "^1.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.3.4"
   },
   "devDependencies": {
