--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "db:pull": "drizzle-kit pull"
   },
   "dependencies": {
-    "@ai-sdk/react": "^3.0.13",
-    "@antv/infographic": "^0.2.6",
+    "@ai-sdk/react": "^3.0.22",
+    "@antv/infographic": "^0.2.7",
     "@base-ui/react": "^1.0.0",
+    "@codemirror/lang-yaml": "^6.1.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@neondatabase/serverless": "^1.0.2",
     "@openrouter/ai-sdk-provider": "^1.5.4",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@uiw/codemirror-theme-github": "^4.25.4",
+    "@uiw/react-codemirror": "^4.25.4",
     "@xyflow/react": "^12.10.0",
-    "ai": "^6.0.13",
+    "ai": "^6.0.22",
     "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -40,9 +44,10 @@
     "nanoid": "^5.1.6",
     "next": "16.1.1",
     "next-intl": "^4.7.0",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-resizable-panels": "^4.2.2",
+    "react-resizable-panels": "^4.3.1",
     "shadcn": "^3.6.3",
     "shiki": "^3.20.0",
     "streamdown": "^1.6.10",
