--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-resizable-panels": "^4.4.1",
     "shadcn": "^3.7.0",
     "shiki": "^3.20.0",
+    "sonner": "^2.0.7",
     "streamdown": "^2.1.0",
     "tailwind-merge": "^3.4.0",
     "tokenlens": "^1.3.1",
