--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,6 @@
     "source.fixAll.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
-  "i18n-ally.localesPaths": ["locale", "src/i18n"]
+  "i18n-ally.localesPaths": ["locale", "src/i18n"],
+  "i18n-ally.keystyle": "nested"
 }
