--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@base-ui/react": "^1.1.0",
     "@codemirror/lang-yaml": "^6.1.2",
     "@codemirror/theme-one-dark": "^6.1.3",
+    "@fontsource-variable/noto-sans": "^5.2.10",
     "@neondatabase/serverless": "^1.0.2",
     "@openrouter/ai-sdk-provider": "^2.1.1",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
