feat: 增加可视化表单

--- a/biome.json
+++ b/biome.json
@@ -39,7 +39,8 @@
           "options": {
             "style": "interface"
           }
-        }
+        },
+        "useBlockStatements": "warn"
       },
       "suspicious": {
         "noUnknownAtRules": "off",
